fix(storage): Replace Panic with Error fixes #17440
When Encoding/Decoding corrupted data, return `Error` instead of `Panic`.

 Changes:
-	modified:   go.mod
-	modified:   go.sum
-	modified:   tsdb/engine/tsm1/compact.gen.go
-	modified:   tsdb/engine/tsm1/compact.gen.go.tmpl
-	modified:   tsdb/engine/tsm1/digest.go
-	modified:   tsdb/engine/tsm1/encoding.go
-	modified:   tsdb/engine/tsm1/encoding_test.go
-	modified:   tsdb/engine/tsm1/file_store.go
-	modified:   tsdb/engine/tsm1/reader_test.go

--- a/tsdb/engine/tsm1/compact.gen.go.tmpl
+++ b/tsdb/engine/tsm1/compact.gen.go.tmpl
@@ -109,9 +109,10 @@ func (k *tsmKeyIterator) combine{{.Name}}(dedup bool) blocks {
 				continue
 			}
 			// If we this block is already full, just add it as is
-			if BlockCount(k.blocks[i].b) >= k.size {
+			if count, err := BlockCount(k.blocks[i].b); err == nil && count >= k.size {
 				k.merged = append(k.merged, k.blocks[i])
 			} else {
+			    // TODO : log the error or propagate it
 				break
 			}
 			i++
@@ -320,9 +321,10 @@ func (k *tsmBatchKeyIterator) combine{{.Name}}(dedup bool) blocks {
 			continue
 		}
 		// If we this block is already full, just add it as is
-		if BlockCount(k.blocks[i].b) >= k.size {
+		if count, err := BlockCount(k.blocks[i].b); err == nil && count >= k.size {
 			k.merged = append(k.merged, k.blocks[i])
 		} else {
+		    // TODO : log the error or propagate it
 			break
 		}
 		i++
